# warthunder-byoh

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  config.json.example
.github/workflows/: release.yaml
crates/core_client/: Cargo.toml
crates/core_client/src/: fm_update.rs  lib.rs
crates/overlay/: Cargo.toml  build.rs
crates/overlay/assets/: app.icns
crates/overlay/src/: main.rs  platform.rs  render_gpu.rs  settings.rs  setup.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: main.rs
data/: fields.json  indicators.json.example
docker/macos/: Dockerfile
docker/ubuntu24/: Dockerfile
packaging/: Info.plist  wt-byoh.desktop
