[package]
name = "core_client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking", "json"] }
thiserror = "1.0"
evalexpr = "11"
zip = { version = "2", default-features = false, features = ["deflate"] }
