[package]
name = "overlay"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "warthunder-byoh"
path = "src/main.rs"


[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
clap = { version = "4", features = ["derive"] }
winit = "0.30"
raw-window-handle = "0.6"
core_client = { path = "../core_client" }
crossbeam-channel = "0.5"
arc-swap = "1"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_Threading",
], optional = true }
wgpu     = { version = "23", optional = true }
glyphon  = { version = "0.7", optional = true }
pollster = { version = "0.3", optional = true }
egui          = { version = "0.30", optional = true }
egui-wgpu     = { version = "0.30", optional = true }
egui-winit    = { version = "0.30", optional = true, default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", default-features = false }

[features]
render = []
windows-glue = ["windows"]
gpu = ["dep:wgpu", "dep:glyphon", "dep:pollster", "dep:egui", "dep:egui-wgpu", "dep:egui-winit", "render"]
