[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "src/main.rs"

[dependencies]
core_client = { path = "../core_client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
